Fix css select bug when id contains '-'

--- a/ScrapySharp.Tests/Html/Page1.htm
+++ b/ScrapySharp.Tests/Html/Page1.htm
@@ -37,8 +37,11 @@
 
 
 <script src="/js.axd?path=http%3a%2f%2fwww.romcyber.com%2fWebResource.axd%3fd%3dVjwlIqi7esLpp02YYsQj5vb-ws10arl6pmfvuDlShTmJbrmWkcW18HyiP3-g-C-LuV80Q3XQAy-AV4njmeyBLCbw27o1%26amp%3bt%3d634485425875249616" type="text/javascript"></script>
-
-    
+      <span class="login-box">
+          Hi romain!
+      </span>      <span id="pass-box">
+          Hi toto!
+      </span>
       
     <div id="navigation">
     </div>
