--- a/ScrapySharp.Tests/Html/InvalidPage1.htm
+++ b/ScrapySharp.Tests/Html/InvalidPage1.htm
@@ -1,1 +1,9 @@
-﻿<div class="login id="lol">test</div>
+﻿<html>
+    <div class="login" id="lol">test</div>
+    
+    <div>
+        <span>Welcome</span>
+        <span> toto</span>
+    </div>
+
+</html>
