--- a/ScrapySharp.Tests/Html/InvalidPage1.htm
+++ b/ScrapySharp.Tests/Html/InvalidPage1.htm
@@ -1,9 +1,29 @@
 ﻿<html>
-    <div class="login" id="lol">test</div>
+    <div class="login id="lol">test</div>
     
     <div>
         <span>Welcome</span>
         <span> toto</span>
+        
+        <table>
+            <thead>
+                <tr>
+                    <th>column 1</th>
+                    <th>column 2</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>value 1</td>
+                    <td>value 2</td>
+                </tr>
+                <tr>
+                    <td>value 3
+                    <td>value 4</td>
+                </tr>
+            </tbody>
+        </table>
+
     </div>
 
 </html>
