F# CssSelectorExecutor get same results than C# version

--- a/ScrapySharp.Tests/Html/Page1.htm
+++ b/ScrapySharp.Tests/Html/Page1.htm
@@ -41,7 +41,9 @@
           Hi romain!
       </span>      <span id="pass-box">
           Hi toto!
-      </span>
+      </span>      <div id="pass-box">
+          Hi titi!
+      </div>
       
     <div id="navigation">
     </div>
