Mark HtmlAgilityCssQueryExtensions methods as Obsolete

--- a/ScrapySharp.Tests/Html/Page1.htm
+++ b/ScrapySharp.Tests/Html/Page1.htm
@@ -75,10 +75,11 @@
     id="widgetab2b8c27-02c4-46ab-a78f-28939c2a1a09">
     
         <h3>Month List</h3>
-    <div class="content">
-        
-<p class="para">Aucun</p>
-<p>
+    <div class="content">
+    <p class="para">Aucun</p>
+    <u><p class="para">Aucun</p></u>
+
+        <p>
     <input type="text" value="nom" class="login"/>
     <input type="text" value="prenom"/>
     <input type="button" value="ok"/>
