Complete the web form parsing

--- a/ScrapySharp.Tests/Html/WebFormPage.htm
+++ b/ScrapySharp.Tests/Html/WebFormPage.htm
@@ -119,7 +119,7 @@
   <div id="ctl00_cphBody_divError"></div>
                                 <div id="ctl00_cphBody_PostList1_posts" class="posts">
                                     
-                                    <form method="POST">
+                                    <form method="POST" name="TestForm">
                                         
                                         <p>
                                             <input name="firstname" type="text" value="romain"/>
