add a lot of DomElement methods

--- a/ScrapySharp.JavaScript/EmbeddedScripts/Html1.html
+++ b/ScrapySharp.JavaScript/EmbeddedScripts/Html1.html
@@ -22,7 +22,8 @@
     </script>
     
     <script>
-        document.getElementById('clock').innerText = new Date();
+        document.getElementById('clock').innerText = Date();
+        //document.getElementById('clock').innerText = 'tata';
     </script>
 
     <body onload="ajouteElement()">
